Included message to handle insertions when array is not full, but there are no possible slots available in the probing.

--- a/AV/hashing/hash.html
+++ b/AV/hashing/hash.html
@@ -638,7 +638,7 @@ form {
       }			
 			
 			if (fullArray && cannotInsert) {
-      	var errorMsg1 = "Array is not full, but number of insertion attempts is greater than array size. Insertion failed. Please Restart.";
+      	var errorMsg1 = "Array is not full, but number of insertion attempts is greater than array size. Insertion failed.";
       	error(errorMsg1);
 	      // Reset flag
 				fullArray = false;
