Reorganizing hashing stuff

--- a/Storyboard/query.html
+++ b/Storyboard/query.html
@@ -23,7 +23,7 @@
       Use hash.html to be able to use them all. For example, here is a visualization where you can use choose your own options:
 
       <center>
-	<iframe src="hash.html" type="text/javascript" width="812" height="640" frameborder="5"> </iframe>
+	<iframe src="../AV/hash.html" type="text/javascript" width="812" height="640" frameborder="5"> </iframe>
       </center>
 
       <br />
@@ -33,7 +33,7 @@
       <br />
 
       <center>
-	<iframe src="hash.html?method=2&collision=1" type="text/javascript" width="812" height="640" frameborder="5"> </iframe>
+	<iframe src="../AV/hash.html?method=2&collision=1" type="text/javascript" width="812" height="640" frameborder="5"> </iframe>
       </center>
 
 
