Arrays on swap are now shown

--- a/AV/ShellsortProficiency.html
+++ b/AV/ShellsortProficiency.html
@@ -58,6 +58,7 @@ a.jsavsettings {
   </tr>
 </table>
 <form style="border: 0px" id="ssproficiency">
+  <div class="jsavcanvas">
   <p style="margin-top:-5px">Instructions:</p>
   <p style="margin-top: -15px; padding: 10px; 10px; margin-right: 10px; border: 1px solid black">
      For each increment, you will need to process each
@@ -80,6 +81,7 @@ a.jsavsettings {
   <input type="button" name="incrementing" value="Done Increment" />
 
   <p class="jsavoutput jsavline"></p>
+  </div>
 </form>
 </div> <!-- container -->
 
