--- a/AV/bubblesort-av.html
+++ b/AV/bubblesort-av.html
@@ -52,7 +52,7 @@ form {
 <div id="container">
   <input type="button" id="about" name="about" value="About" style="margin-top:10px;"/>
   <a class="jsavsettings" href="#">Settings</a>
-  <h1 style="">Selection Sort Visualization</h1>
+  <h1 style="">Bubble Sort Visualization</h1>
 
   <form id="ssperform">
     <p>
