Fix initial display on n^2 sorts

--- a/AV/insertionsort-av.html
+++ b/AV/insertionsort-av.html
@@ -223,6 +223,7 @@ form {
       for (i = 0; i < theArray.length; i++)
       	arr.css(i, {"background-color": "#eee"});
       var i, incr;
+      av.displayInit();
       inssort(0, 1);
       av.umsg("Done sorting!");
       av.recorded(); // mark the end
