--- a/AV/bubblesort-av.html
+++ b/AV/bubblesort-av.html
@@ -243,6 +243,7 @@ form {
       // .. and the array. use the layout the user has selected
       arr = av.ds.array(theArray, {indexed: true, layout: arrayLayout.val()});
       var i, incr;
+      av.displayInit();
       // PUT STUFF HERE TO INVOKE YOUR SORT
 	  selsort();
       av.umsg("Done sorting!");
