--- a/AV/Birthday.html
+++ b/AV/Birthday.html
@@ -1,30 +1,38 @@
+<!DOCTYPE html>
 <!-- Simple activity to calculate the probability of collisions for a
      given number of values in a table of a given size.
-     Written by Cliff Shaffer, August 2011 as part of the OpenDSA
-     project. For more information, see http://algoviz.org/OpenDSA
+     Written by Cliff Shaffer, August 2011.
+     Revised for HTML validation and reformatting, June 2012.
+     For more information, see http://algoviz.org/OpenDSA
 -->
 
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
-  <title>Birthday Problem Calculator</title>
-  <link href="opendsaAV.css" title="CSS" rel="stylesheet" type="text/css" />
-  <link rel="stylesheet" href="../JSAV/css/JSAV.css" type="text/css" />
-<style>
+<meta charset="utf-8">
+<title>Birthday Problem Calculator</title>
+<link href="opendsaAV.css" title="CSS" rel="stylesheet" type="text/css" />
+<link rel="stylesheet" href="../JSAV/css/JSAV.css" type="text/css" />
 
+<style type="text/css">
 #container {
-  width: 700px;
-  height: 120px;
+  width: 520px;
+  height: 150px;
   border: 1px solid black;
   background-color: #efe;
-  padding: 10px;
-  padding-right: 0px;
   overflow: hidden;
 }
 
+p.instructions {
+  text-align:center;
+  margin: 0px;
+}
+
+p.output {
+  text-align:center;
+  margin: 0px;
+  margin-top: -15px;
+}
 </style>
-
-
 </head>
 
 <body>
@@ -32,48 +40,51 @@
 <table id="tableT">
   <tr>
     <td>
-      <p align="center" >
+      <p class="instructions">
         Calculate the probability of a collision.<br/>
-        Formula Used: 1 - [ t! / ((t-n)! * (t^n)) ]<br/>
+        Formula Used: \(1 - \frac{t!}{(t-n)! * (t^n)}\)<br/>
         where t is the table size
         and n is the number of records inserted.
       </p>
     </td>
-    <td>
-      <input type="button" name="about" value="About" style="margin-left: 25px"/>
+    <td style="text-align: right; vertical-align: top">
+      <input type="button" name="about" value="About" >
     </td>
   </tr>
   <tr>
-    <td>
+    <td colspan="2">
       <p>
-        <label for="tablesize">&nbsp;Table size:&nbsp;</label>
-        <input size="5" name="tablesize" type="number" value="365"/>
-        <label for="numrecs">&nbsp;# of records&nbsp;</label>
-        <input size="5" name="numrecs" type="number" value="5"/>&nbsp;
+        <label>&nbsp;Table size:&nbsp;</label>
+        <input name="tablesize" type="number" value="365"/>
+        <label>&nbsp;# of records&nbsp;</label>
+        <input name="numrecs" type="number" value="5"/>&nbsp;
         <input type="button" name="calculate" value="Calculate" />
       </p>
     </td>
-    <td>
-      <p name="output" style="margin-left: -40px"></p>
+  </tr>
+  <tr>
+    <td colspan="2">
+      <p class="output" ></p>
     </td>
   </tr>
 </table>
-</div id="container">
+</div>
 
-<!----------------
-| SCRIPT SECTION |
------------------>
+<!-- SCRIPT SECTION -->
 
 <script
    src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js">
 </script>
 
 <script src="../JSAV/build/JSAV-min.js"></script>
+<script type="text/javascript"
+	src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+</script>
 
 <script>
 (function($) {
   // Convenience function for writing output messages
-  var Tell = function(msg) { $('p[name="output"]').text(msg); };
+  var Tell = function(msg) { $('p[class="output"]').text(msg); };
 
   // Action callbacks for form entities
   $('input[name="about"]').click(About);
@@ -87,7 +98,7 @@
 
   // Process About button: Pop up a message with an Alert
   function About() {
-    alert("Birthday problem calculator\nWritten by Cliff Shaffer\nCreated as part of the OpenDSA hypertextbook project.\nFor more information, see http://algoviz.org/eBook\nWritten during August, 2011\nLast update: August 13, 2011\nJSAV library version " + JSAV.version());
+    alert("Birthday problem calculator\nWritten by Cliff Shaffer\nCreated as part of the OpenDSA hypertextbook project\nFor more information, see http://algoviz.org/OpenDSA\nSource and development history available at https://github.com/cashaffer/OpenDSA\nCompiled with JSAV library version " + JSAV.version());
   }
 
   // Validate Table size field
@@ -120,7 +131,7 @@
           fact = fact * i/TSize;
         prob = 1.0 - fact;
       }
-      Tell(prob);
+      Tell(prob*100 + "%");
     }
   }
 })(jQuery);
